30 May 2018
remove: radio.php has no need for check_user_status since not loaded directly by user
remove: need to hash check, salty function for logout.php
revert: reversed conditionals
fix: a couple of var set that should have been a comparison
replace: sizeof with count for consistency
replace: __DIR__ with dirname(__FILE__) for consistency
update: README to include required MariaDB settings
add: check for innodb_file_format , innodb_large_prefix, innodb_file_per_table in mysql during install

27 May 2018
remove: cleanup from user thread, remove autoclean and register_shutdown_function
add: cronjob to contol cleanup on separate thread
update: manually set $_SERVER['HTTP_HOST'] = $site_config['domain'] when $_SERVER['HTTP_HOST'] and $_SERVER['SERVER_NAME'] are empty
update: login.php move 'remember me' above login button
update: welcome message to new users
update: cleanup info for hourly backup
update: rewrite Peer Class to remove need for ANY_VALUE, MariaDB does not have it 

24 May 2018
add: check for mysql variable innodb_large_prefix = 1 during install
update: schema tokens table to dynamic
add: password_needs_rehash to login
update: check to assure PASSWORD_ARGON2I is available
fix: errors in log_viewer.php
update: use PASSWORD_BCRYPT for php versions prior to 7.2.0

23 May 2018
add: limit to number of cleanup scripts processed each run
update: increase karma achievement to start at 250, users start with 200
fix: undefinded lang in cleanup
update: clear default cache during install
fix: dissallow cleanup scripts to run before installation completed
fix: typo in adduser.php
fix: count in forum_posts.php

16 May 2018
fix: topics view increment
update: dependencies
update: replace password_hash algorithm bcrypt with argon2i, this only effects new or updated passwords,
        all previous password will continue to use bcrypt until password is updated

13 May 2018
update: move check for width/height to after if proxy url exists
remove: image proxy default url